add database by  composer

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "UK\\": "UzhKeksy"
         }
     },
-    "require": {}
+    "require": {
+        "joshcam/mysqli-database-class": "^2.9"
+    }
 }
